<resources>
    <string name="app_name">any自习室</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="launching">启动中</string>
    <string name="num_suffix">号自习室</string>
    <string name="join">进入</string>
    <string name="saySomething">say something…</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="participate">加入</string>
    <string name="defAudience">0个观众</string>
    <string name="send">发送</string>
    <string name="internetLost">网络开小差了～</string>
    <string name="loading">加载中....</string>
    <string name="joinRoom">加入直播间</string>
    <string name="leaveRoom">离开直播间</string>
    <string name="rooms">大厅</string>
    <string name="testProductDisclaimer">测试产品免责声明</string>
    <string name="disclaimers">本产品是由anyRTC提供的一款测试产品，anyRTC享有本产品的著作权和所有权。特此免费授予获得本产品和相关文档文件（以下简称”软件”）副本的任何人无限制地使用软件的权利，包括但不限制试用，复制，修改，合并，发布，分发，但本产品不得用于商业用途，不得再许可和/或出售该软件的副本。 本产品按“现状”提供，没有任何形式的明示担保包括但不限于对适配性、特定目的的适用性和非侵权性的担保。无论是由于与本产品或本产品的试用或其他方式有关的任何合同、侵权或其他形式的行为，anyRTC均不对任何索赔、损害或其他责任负责。 您可以自由选择是否试用本产品提供的服务，如果您下载、安装、试用本产品中所提供的服务，即表明您信任该产品所有人，anyRTC对任何原因在试用本产品中提供的服务时可能对您自身或他人造成的任何形式的损失和伤害不承担任何责任。</string>
    <string name="settings">设置</string>
    <string name="releaseDate">发版时间</string>
</resources>